--- a/gallery.html
+++ b/gallery.html
@@ -19,7 +19,7 @@
   <main class="gallery">
     <h1>School Gallery</h1>
     <div class="images">
-      <img src="Images/school garden.jpg" alt="School Garden - Front View">
+      <img src="Images/School garden.jpg" alt="School Garden - Front View">
       <img src="Images/school gardenn.jpg" alt="Library">
       <img src="Images/my school.jpg" alt="Sports Field">
       <img src="Images/career day.jpg" alt="Students">
